# VazhkaiRhythm

./: LICENSE  README.md
backend/: kee-code.py  llm_demo.py  output_pandas.csv  pyproject.toml  tryout1-llmtocsv
backend/app/: config.py  main.py
backend/app/db/: database_model.py
backend/app/models/: llm_model.py
backend/app/service/: tracker_service.py
backend/app/utils/: logger.py  parser.py
